# aoc

./: .pre-commit-config.yaml  Cargo.toml  README.md  mise.toml
2015/01/: Cargo.toml  input.txt
2015/01/src/: lib.rs
2015/02/: Cargo.toml  input.txt
2015/02/src/: lib.rs
2015/03/: Cargo.toml  input.txt
2015/03/src/: lib.rs
2015/04/: Cargo.toml  input.txt
2015/04/src/: lib.rs
2015/05/: Cargo.toml  input.txt
2015/05/src/: lib.rs
2015/06/: Cargo.toml  input.txt
2015/06/src/: lib.rs
2015/07/: Cargo.toml  input.txt
2015/07/src/: lib.rs
2015/08/: Cargo.toml  input.txt
2015/08/src/: lib.rs
2015/09/: Cargo.toml  input.txt
2015/09/src/: lib.rs
2015/10/: Cargo.toml  input.txt
2015/10/src/: lib.rs
2015/11/: Cargo.toml  input.txt
2015/11/src/: lib.rs
2015/12/: Cargo.toml  input.txt
2015/12/src/: lib.rs
2015/13/: Cargo.toml  input.txt
2015/13/src/: lib.rs
2015/14/: Cargo.toml  input.txt
2015/14/src/: lib.rs
2015/15/: Cargo.toml  input.txt
2015/15/src/: lib.rs
2015/16/: Cargo.toml  input.txt
2015/16/src/: lib.rs
2015/17/: Cargo.toml  input.txt
2015/17/src/: lib.rs
2015/18/: Cargo.toml  input.txt
2015/18/src/: lib.rs
2015/19/: Cargo.toml  input.txt
2015/19/src/: lib.rs
2015/20/: Cargo.toml  input.txt
2015/20/src/: lib.rs
2015/21/: Cargo.toml  input.txt
2015/21/src/: lib.rs
2015/22/: Cargo.toml  input.txt
2015/22/src/: lib.rs
2015/23/: Cargo.toml  input.txt
2015/23/src/: lib.rs
2015/24/: Cargo.toml  input.txt
2015/24/src/: lib.rs
2015/25/: Cargo.toml  input.txt
2015/25/src/: lib.rs
2022/: README.md
2022/01/: Cargo.toml  input.txt
2022/01/src/: lib.rs
2022/02/: Cargo.toml  input.txt
2022/02/src/: lib.rs
2022/03/: Cargo.toml  input.txt
2022/03/src/: lib.rs
2022/04/: Cargo.toml  input.txt
2022/04/src/: lib.rs
2022/05/: Cargo.toml  input.txt
2022/05/src/: lib.rs
2022/06/: Cargo.toml  input.txt
2022/06/src/: lib.rs
2022/07/: Cargo.toml  input.txt
2022/07/src/: lib.rs
2022/08/: Cargo.toml  input.txt
2022/08/src/: lib.rs
2022/09/: Cargo.toml  input.txt
2022/09/src/: lib.rs
2022/10/: Cargo.toml  input.txt
2022/10/day_template/: Cargo.toml
2022/10/src/: lib.rs
2022/11/: Cargo.toml  input.txt
2022/11/src/: lib.rs
2022/12/: Cargo.toml  input.txt
2022/12/src/: lib.rs
2022/13/: Cargo.toml  input.txt
2022/13/src/: lib.rs
2022/14/: Cargo.toml  input.txt
2022/14/day_template/: input.txt
2022/14/src/: lib.rs
2022/15/: Cargo.toml  input.txt
2022/15/src/: lib.rs
2023/: README.md
2023/01/: Cargo.toml  input.txt
2023/01/src/: lib.rs
2023/02/: Cargo.toml  input.txt
2023/02/src/: lib.rs
2023/03/: Cargo.toml  input.txt
2023/03/src/: lib.rs
2023/04/: Cargo.toml  input.txt
2023/04/src/: lib.rs
2023/05/: Cargo.toml  input.txt
2023/05/src/: lib.rs
2023/06/: Cargo.toml  input.txt
2023/06/src/: lib.rs
2023/07/: Cargo.toml  input.txt
2023/07/src/: lib.rs
2023/08/: Cargo.toml  input.txt
2023/08/src/: lib.rs
2023/09/: Cargo.toml  input.txt
2023/09/src/: lib.rs
2023/10/: Cargo.toml  input.txt
2023/10/src/: lib.rs
2023/11/: Cargo.toml  input.txt
2023/11/src/: lib.rs
2023/12/: Cargo.toml  input.txt
2023/12/src/: lib.rs
2023/13/: Cargo.toml  input.txt
2023/13/src/: lib.rs
2023/14/: Cargo.toml  input.txt
2023/14/src/: lib.rs
2023/15/: Cargo.toml  input.txt
2023/15/src/: lib.rs
2023/16/: Cargo.toml  input.txt
2023/16/src/: lib.rs
2024/: README.md
2024/01/: Cargo.toml  input.txt
2024/01/src/: lib.rs
2024/02/: Cargo.toml  input.txt
2024/02/src/: lib.rs
2024/03/: Cargo.toml  input.txt
2024/03/src/: lib.rs
2024/04/: Cargo.toml  input.txt
2024/04/src/: lib.rs
2024/05/: Cargo.toml  input.txt
2024/05/src/: lib.rs
2024/06/: Cargo.toml  input.txt
2024/06/src/: lib.rs
2024/07/: Cargo.toml  input.txt
2024/07/src/: lib.rs
2024/08/: Cargo.toml  input.txt
2024/08/src/: lib.rs
2024/09/: Cargo.toml  input.txt
2024/09/src/: lib.rs
2024/10/: Cargo.toml  input.txt
2024/10/src/: lib.rs
2024/11/: Cargo.toml  input.txt
2024/11/src/: lib.rs
2024/12/: Cargo.toml  input.txt
2024/12/src/: lib.rs
2024/13/: Cargo.toml  input.txt
2024/13/src/: lib.rs
2024/14/: Cargo.toml  input.txt
2024/14/src/: lib.rs
2024/15/: Cargo.toml  input.txt
2024/15/src/: lib.rs
2024/16/: Cargo.toml  input.txt
2024/16/src/: lib.rs
2024/17/: Cargo.toml  input.txt  notes.md
2024/17/src/: lib.rs
2024/18/: Cargo.toml  input.txt
2024/18/src/: lib.rs
2024/19/: Cargo.toml  input.txt
2024/19/src/: lib.rs
2024/20/: Cargo.toml  input.txt
2024/20/src/: lib.rs
2024/21/: Cargo.toml  input.txt
2024/21/src/: lib.rs
2024/22/: Cargo.toml  input.txt
2024/22/src/: lib.rs
2024/23/: Cargo.toml  input.txt
2024/23/src/: lib.rs
2024/24/: Cargo.toml  input.txt
2024/24/src/: lib.rs
2024/25/: Cargo.toml  input.txt
2024/25/src/: lib.rs
2025/01/: Cargo.toml  input.txt
2025/01/src/: lib.rs
2025/02/: Cargo.toml  input.txt
2025/02/src/: lib.rs
2025/03/: Cargo.toml  input.txt
2025/03/src/: lib.rs
2025/04/: Cargo.toml  input.txt
2025/04/src/: lib.rs
2025/05/: Cargo.toml
2025/05/src/: lib.rs
2025/06/: Cargo.toml  input.txt
2025/06/src/: lib.rs
2025/07/: Cargo.toml  input.txt
2025/07/src/: lib.rs
2025/08/: Cargo.toml  input.txt
2025/08/src/: lib.rs
2025/09/: Cargo.toml  input.txt
2025/09/src/: lib.rs
2025/10/: Cargo.toml  input.txt
2025/10/src/: lib.rs
2025/11/: Cargo.toml  input.txt
2025/11/src/: lib.rs
2025/12/: Cargo.toml  input.txt
2025/12/src/: lib.rs
common/: Cargo.toml
common/benches/: digit_string.rs  number_length.rs
common/src/: coordinates.rs  digit_string.rs  direction.rs  distances.rs  grid.rs  lib.rs  position.rs  utils.rs
day_template/: Cargo.toml
day_template/src/: lib.rs
workbench/: Cargo.toml
workbench/src/: lib.rs  main.rs
