[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "workbench",
  "common",

  "2015/01",
  "2015/02",
  "2015/03",
  "2015/04",
  "2015/05",
  "2015/06",
  "2015/07",
  # other days missing

  # other years missing

  "2022/01",
  "2022/02",
  "2022/03",
  "2022/04",
  "2022/05",
  "2022/06",
  "2022/07",
  "2022/08",
  "2022/09",
  "2022/10",
  "2022/11",
  "2022/12",
  "2022/13",
  "2022/14",
  "2022/15",
  # other days missing

  "2023/01",
  "2023/02",
  "2023/03",
  "2023/04",
  "2023/05",
  "2023/06",
  "2023/07",
  "2023/08",
  "2023/09",
  "2023/10",
  "2023/11",
  # day 12 is missing
  "2023/13",
  "2023/14",
  "2023/15",
  "2023/16",
  # other days missing

  "2024/01",
  "2024/02",
  "2024/03",
  "2024/04",
  "2024/05",
]
