[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "2"
members = [
  "workbench",
  "common",

  "2015/01",
  "2015/02",
  "2015/03",
  "2015/04",
  "2015/05",
  "2015/06",
  "2015/07",
  "2015/08",
  "2015/09",
  "2015/10",
  "2015/11",
  "2015/12",
  "2015/13",
  "2015/14",
  "2015/15",
  "2015/16",
  "2015/17",
  "2015/18",
  "2015/19",
  "2015/20",
  "2015/21",
  "2015/22",
  # other days missing

  # other years missing

  "2022/01",
  "2022/02",
  "2022/03",
  "2022/04",
  "2022/05",
  "2022/06",
  "2022/07",
  "2022/08",
  "2022/09",
  "2022/10",
  "2022/11",
  "2022/12",
  "2022/13",
  "2022/14",
  "2022/15",
  # other days missing

  "2023/01",
  "2023/02",
  "2023/03",
  "2023/04",
  "2023/05",
  "2023/06",
  "2023/07",
  "2023/08",
  "2023/09",
  "2023/10",
  "2023/11",
  # day 12 is missing
  "2023/13",
  "2023/14",
  "2023/15",
  "2023/16",
  # other days missing

  "2024/01",
  "2024/02",
  "2024/03",
  "2024/04",
  "2024/05",
  "2024/06",
  "2024/07",
  "2024/08",
  "2024/09",
  "2024/10",
  "2024/11",
  "2024/12",
  "2024/13",
  "2024/14",
  "2024/15",
  "2024/16",
  "2024/17",
  "2024/18",
  "2024/19",
  "2024/20",
  "2024/21",
  "2024/22",
  "2024/23",
  "2024/24",
  "2024/25",

  "2025/01",
]

[workspace.dependencies]
criterion = "0.8"
itertools = "0.14"
json = "0.12"
md5 = "0.8"
nom = "7.1"
num = "0.4"
num-traits = "0.2"
rayon = "1.11"
regex = "1.12"
rustc-hash = "2.1"
thiserror = "2"
