[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
num-traits = "0.2"
rustc-hash = "2.1"
thiserror = "2.0.8"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "number_length"
harness = false

[[bench]]
name = "digit_string"
harness = false
