[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
memoize = { workspace = true }
num-traits = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
parameterized = { workspace = true }

[[bench]]
name = "number_length"
harness = false

[[bench]]
name = "digit_string"
harness = false
