[package]
name = "aoc-workbench"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
common = { path = "../common" }
paste = "1.0"
thiserror = "2.0"

y2023-d1 = { path = "../2023/01" }
y2023-d2 = { path = "../2023/02" }
y2023-d3 = { path = "../2023/03" }
y2023-d4 = { path = "../2023/04" }
y2023-d5 = { path = "../2023/05" }
y2023-d6 = { path = "../2023/06" }
y2023-d7 = { path = "../2023/07" }
