[package]
name = "aoc-workbench"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
common = { path = "../common" }
paste = "1.0"
thiserror = "2.0"

y2022-d1 = { path = "../2022/01" }
y2022-d2 = { path = "../2022/02" }
y2022-d3 = { path = "../2022/03" }
y2022-d4 = { path = "../2022/04" }
y2022-d5 = { path = "../2022/05" }
y2022-d6 = { path = "../2022/06" }
y2022-d7 = { path = "../2022/07" }
y2022-d8 = { path = "../2022/08" }
y2022-d9 = { path = "../2022/09" }
y2022-d10 = { path = "../2022/10" }
y2022-d11 = { path = "../2022/11" }
y2022-d12 = { path = "../2022/12" }
y2022-d13 = { path = "../2022/13" }
y2022-d14 = { path = "../2022/14" }
y2022-d15 = { path = "../2022/15" }

y2023-d1 = { path = "../2023/01" }
y2023-d2 = { path = "../2023/02" }
y2023-d3 = { path = "../2023/03" }
y2023-d4 = { path = "../2023/04" }
y2023-d5 = { path = "../2023/05" }
y2023-d6 = { path = "../2023/06" }
y2023-d7 = { path = "../2023/07" }
y2023-d8 = { path = "../2023/08" }
y2023-d9 = { path = "../2023/09" }
y2023-d10 = { path = "../2023/10" }
y2023-d11 = { path = "../2023/11" }
# day 12 is missing
y2023-d13 = { path = "../2023/13" }
y2023-d14 = { path = "../2023/14" }
y2023-d15 = { path = "../2023/15" }
y2023-d16 = { path = "../2023/16" }
# other days missing

y2024-d1 = { path = "../2024/01" }
