[package]
name = "aoc-workbench"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
paste = "1.0"
thiserror = "2.0"
humantime = "2.1"
rustc-hash = "2.1"

y2015-d1 = { path = "../2015/01" }
y2015-d2 = { path = "../2015/02" }
y2015-d3 = { path = "../2015/03" }
y2015-d4 = { path = "../2015/04" }
y2015-d5 = { path = "../2015/05" }
y2015-d6 = { path = "../2015/06" }
y2015-d7 = { path = "../2015/07" }
y2015-d8 = { path = "../2015/08" }
y2015-d9 = { path = "../2015/09" }
y2015-d10 = { path = "../2015/10" }
y2015-d11 = { path = "../2015/11" }
y2015-d12 = { path = "../2015/12" }
y2015-d13 = { path = "../2015/13" }
y2015-d14 = { path = "../2015/14" }
y2015-d15 = { path = "../2015/15" }
y2015-d16 = { path = "../2015/16" }
y2015-d17 = { path = "../2015/17" }
y2015-d18 = { path = "../2015/18" }
y2015-d19 = { path = "../2015/19" }
y2015-d20 = { path = "../2015/20" }
y2015-d21 = { path = "../2015/21" }
y2015-d22 = { path = "../2015/22" }

y2022-d1 = { path = "../2022/01" }
y2022-d2 = { path = "../2022/02" }
y2022-d3 = { path = "../2022/03" }
y2022-d4 = { path = "../2022/04" }
y2022-d5 = { path = "../2022/05" }
y2022-d6 = { path = "../2022/06" }
y2022-d7 = { path = "../2022/07" }
y2022-d8 = { path = "../2022/08" }
y2022-d9 = { path = "../2022/09" }
y2022-d10 = { path = "../2022/10" }
y2022-d11 = { path = "../2022/11" }
y2022-d12 = { path = "../2022/12" }
y2022-d13 = { path = "../2022/13" }
y2022-d14 = { path = "../2022/14" }
y2022-d15 = { path = "../2022/15" }

y2023-d1 = { path = "../2023/01" }
y2023-d2 = { path = "../2023/02" }
y2023-d3 = { path = "../2023/03" }
y2023-d4 = { path = "../2023/04" }
y2023-d5 = { path = "../2023/05" }
y2023-d6 = { path = "../2023/06" }
y2023-d7 = { path = "../2023/07" }
y2023-d8 = { path = "../2023/08" }
y2023-d9 = { path = "../2023/09" }
y2023-d10 = { path = "../2023/10" }
y2023-d11 = { path = "../2023/11" }
# day 12 is missing
y2023-d13 = { path = "../2023/13" }
y2023-d14 = { path = "../2023/14" }
y2023-d15 = { path = "../2023/15" }
y2023-d16 = { path = "../2023/16" }
# other days missing

y2024-d1 = { path = "../2024/01" }
y2024-d2 = { path = "../2024/02" }
y2024-d3 = { path = "../2024/03" }
y2024-d4 = { path = "../2024/04" }
y2024-d5 = { path = "../2024/05" }
y2024-d6 = { path = "../2024/06" }
y2024-d7 = { path = "../2024/07" }
y2024-d8 = { path = "../2024/08" }
y2024-d9 = { path = "../2024/09" }
y2024-d10 = { path = "../2024/10" }
y2024-d11 = { path = "../2024/11" }
y2024-d12 = { path = "../2024/12" }
y2024-d13 = { path = "../2024/13" }
y2024-d14 = { path = "../2024/14" }
y2024-d15 = { path = "../2024/15" }
y2024-d16 = { path = "../2024/16" }
y2024-d17 = { path = "../2024/17" }
y2024-d18 = { path = "../2024/18" }
y2024-d19 = { path = "../2024/19" }
y2024-d20 = { path = "../2024/20" }
y2024-d21 = { path = "../2024/21" }
y2024-d22 = { path = "../2024/22" }
y2024-d23 = { path = "../2024/23" }
y2024-d24 = { path = "../2024/24" }
y2024-d25 = { path = "../2024/25" }

y2025-d1 = { path = "../2025/01" }
